[gd_scene load_steps=5 format=3 uid="uid://b0gx3a0nos1dc"]

[ext_resource type="Script" path="res://player/player_ship.gd" id="1_nxrqa"]

[sub_resource type="Animation" id="Animation_dmabg"]
resource_name = "Thrust"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ThrustLine:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_q0q3p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ThrustLine:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_myau6"]
_data = {
"RESET": SubResource("Animation_q0q3p"),
"Thrust": SubResource("Animation_dmabg")
}

[node name="PlayerShip" type="CharacterBody2D"]
process_mode = 1
z_index = 5
collision_mask = 0
motion_mode = 1
script = ExtResource("1_nxrqa")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(16, 0, -16, -16, -8, 0, -16, 16, 16, 0)
default_color = Color(0.309804, 0.690196, 0.733333, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Collider" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-16, -16, 16, 0, -16, 16, -8, 0)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
collision_priority = 10.0

[node name="Collider" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-16, -16, 16, 0, -16, 16, -8, 0)

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="ThrustLine" type="Line2D" parent="."]
position = Vector2(4.5, 4.76837e-07)
scale = Vector2(0.833333, 0.533333)
points = PackedVector2Array(-30, -12, -36, 0, -30, 12)
width = 3.0
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="ThrustAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_myau6")
}
